--- a/CMfunctor.tex
+++ b/CMfunctor.tex
@@ -264,12 +264,45 @@ $$
 \item For every $t \in T$, the fiber $\left((g')^{-1}(U)\right)_t$ is dense in $C_t$
 \end{enumerate}
 \end{enumerate}
+    We identify $\gamma_1 = (h_1,C_1 \rightarrow T,g_1)$ with $\gamma_2 = (h_2,C_2 \rightarrow T,g_2)$ in $\CMfunctor_{X/B}(T)$ if $h_1 = h_2$ and there exists an $X_T$-isomorphism $\phi\colon C_1 \rightarrow C_2$. In this case, $\phi$ is said to be an isomorphism $\gamma_1 \rightarrow \gamma_2$.
 \end{situation}
 
 \begin{remark}\label{cm-functor}
+The construction in Situation~\ref{situation-cm} defines a functor
+$$
+    \CMfunctor_{X/B}\colon \left( \Sch/S \right)^{\text{opp}} \rightarrow \text{Sets}.
+$$
+To see this, suppose $\phi\colon T_2 \rightarrow T_1$ is a morphism of $S$-schemes, and let $(h_1,C_1 \rightarrow T_1,g_1) \in \CMfunctor_{X/B}(T_1)$. 
+Then for $h_2 = h_1 \circ \phi$, $C_2 = C_1 \times_{T_1} T_2$, and $g_2\colon C_2 \rightarrow C_1 \xrightarrow{g_1} X$, we have $(h_2, C_2 \rightarrow T_2, g_2) \in \CMfunctor_{X/B}(T_2)$. 
+Properties~\ref{situation-cm-diagram},~\ref{situation-cm-morphism}, and~\ref{situation-cm-finite} follow from various tags in More~on~Morphisms~of~Spaces and Morphisms~of~Algebraic~Spaces. %0E10, 04NS, 03MO, 03XR, 04WP, 03ZS
+For Property~\ref{situation-cm-open}, let $U_1 \subseteq X_{T_1}$ be an open subspace satisfying Property~\ref{situation-cm-open} for $(h_1, C_1 \rightarrow T_1, g_1)$, and define $U_2 \subseteq X_{T_2}$ to be $\phi_X^{-1}(U_1)$. 
+Parts (a) and (b), respectively, follow from the fact that
+$$
+\vcenter{\xymatrix{
+(g_2')^{-1}U_2 \ar[r] \ar[d] & (g_1')^{-1}U_1 \ar[d] \\
+U_2 \ar[r] & U_1
+}} \text{ and }
+\vcenter{\xymatrix{
+(g_2')^{-1}U_2 \ar[r] \ar[d] & (g_1')^{-1}U_1 \ar[d] \\
+C_2 \ar[r] & C_1
+}}
+$$
+are cartesian.
 \end{remark}
 
 \begin{remark}\label{cm-base-change}
+Suppose we are given a cartesian square
+$$
+\xymatrix{
+    C_2 \ar[r]^{g_2'} \ar[d] & X_2 \ar[d]^{\phi} \\
+    C_1 \ar[r]_{g_1'} & X_1
+}
+$$
+of algebraic spaces, with $g_1'$ finite. Then the maximal open subset of $X_i$ over which $g_i'$ is a closed immersion is
+$$
+    U_i = X_i \setminus \text{Supp}(\Coker(\mathcal{O}_{X_i} \rightarrow g_{i,*}'\mathcal{O}_{C_i})).
+$$
+    In this situation, we have $\phi^{-1}(U_1) = U_2$, which follows from affine base change (Cohomology of Algebraic Spaces, Lemma~\ref{lemma-affine-base-change}, Tag 07U8), the behavior of supports of finite type quasi-coherent modules under preimages (Morphisms of Algebraic Spaces, Lemma Tag 07TZ), and the fact that the pushforward of a finite type quasi-coherent module under a finite morphism is again finite type quasi-coherent ({\bfseries Can't find in SP}).
 \end{remark}
 
 \begin{lemma}\label{cm-dense-fibers}
@@ -410,7 +443,7 @@ is fibre product square. This trivial remark
 will occasionally be useful to change the base algebraic space.
 \end{remark}
 \begin{lemma}
-    In Situation~\ref{situation-cm}, $\CMfunctor_{X/B}$ is limit-preserving.
+    In Situation~\ref{situation-cm}, $\CMfunctor_{X/B}$ is limit preserving.
 	\label{lemma-cm-limits}
 \end{lemma}
 \begin{proof}
@@ -428,20 +461,11 @@ $$
     denote the base change to $T_i$ with $i \geq 0$ by $(h_i,C_i \rightarrow T_i,g_i)$, and the base change to $T$ by $(h,C \rightarrow T,g)$. We need to show that if $(h,C \rightarrow T,g) \in \CMfunctor_{X/B}(T)$, then there exists an $i \geq 0$ with $(h_i, C_i \rightarrow T_i, g_i) \in \CMfunctor_{X/B}(T_i)$. From Tag~084Z (finiteness behaves nicely w.r.t.\ limits) and Tag~01EF (stack of relative dimension 1 CM curves is algebraic), we find an $i \geq 0$ so that~\eqref{situation-cm-morphism} and~\eqref{situation-cm-finite} hold.
 
 \medskip\noindent
-We still need to show the existence of an $i \geq 0$ for which the set
+We still need to show the existence of an $i \geq 0$ for which the space
 $$
 U_i = X_{T_i} \setminus \text{Supp}(\Coker(\mathcal{O}_{X_{T_i}} \rightarrow g'_{i,*} \mathcal{O}_{C_i}))
 $$
-has fiberwise dense preimage in $C_i$. Since $C_i \rightarrow T_i$ has relative dimension $1$, this is equivalent to requiring that $C_i \setminus (g_i')^{-1} (U_i)$ has relative dimension $0$ over $T_i$. After showing that the $U_i$ are stable under taking preimages, this follows from Tag~0D4K (relative dimension behaves nicely w.r.t.\ limits). \\
-The stability of the $U_i$ under taking preimages boils down to the following. Given cartesian squares
-$$
-\xymatrix{
-C_0 \ar[r]^{g_0} \ar[d]^{g_0'} &C_1 \ar[d]^{g_1'} \\
-X_{T_0} \ar[d] \ar[r]^{b} & X_{T_1} \ar[d] \\
-T_0 \ar[r] &T_1
-}
-$$
-with $g'_1$ finite, the preimage of $(g'_1)^{-1} \text{Supp}( \Coker(\mathcal{O}_{X_{T_1}} \rightarrow g'_{1,*} \mathcal{O}_{C_1}))$ under $b$ is equal to $(g'_0)^{-1} \text{Supp}( \Coker(\mathcal{O}_{X_{T_0}} \rightarrow g'_{0,*} \mathcal{O}_{C_0}))$. This follows from Tag~07U8 (base change for affine morphisms) and Tag~056J (preimage of support of finite-type quasi-coherent sheaf), which applies because the finiteness of $g_1'$ implies that $g_{1,*}' \mathcal{O}_{C_1}$ is finite-type quasi-coherent {\bfseries Reference?}.
+has fiberwise dense preimage in $C_i$. Since $C_i \rightarrow T_i$ has relative dimension $1$, this is equivalent to requiring that $C_i \setminus (g_i')^{-1} (U_i)$ has relative dimension $0$ over $T_i$. The $U_i$ are stable under taking preimages by Remark~\ref{remark-cm-base-change}, so this follows from Tag~0D4K (relative dimension behaves nicely w.r.t.\ limits).
 \end{proof}
 
 
